# 4-practica-mascotas-virtuales-ateam

./: CMakeLists.txt  README.md  main.cpp
src/: Cuidado.cpp  Cuidado.h  Habilidad.cpp  Habilidad.h  Mascota.cpp  Mascota.h  Objeto.cpp  Objeto.h  Tienda.cpp  Tienda.h  Usuario.cpp  Usuario.h
